--- a/tesla-clone/src/index.css
+++ b/tesla-clone/src/index.css
@@ -1,5 +1,5 @@
 *{
-  font-family: "Rubik","sans-serif";
+  font-family: 'Rubik',sans-serif;
   color: rgb(87, 82, 82);
   margin: 0;
   padding: 0;
